@@ -1,5 +1,6 @@
 Changes for 1.3.9:
 
+ - fixed hitory severity (Eugene)
  - fixed user information displayed (Eugene)
  - fixed logfiles monitoring (Eugene)
  - fixed WEB monitoring (Eugene)
